scripts/nullaway/wpi/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8.txt
../wpi/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8/src/org/delaunay/Utils.java:46: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return null;
            ^
    (see http://t.uber.com/nullaway )
../wpi/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8/src/org/delaunay/Utils.java:55: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return null;
            ^
    (see http://t.uber.com/nullaway )
../wpi/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8/src/org/delaunay/Utils.java:78: error: [NullAway] dereferenced expression vector is @Nullable
                return new Vertex(vector.x, vector.y);
                                        ^
    (see http://t.uber.com/nullaway )
../wpi/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8/src/org/delaunay/Utils.java:89: error: [NullAway] dereferenced expression vector is @Nullable
                return new Point2D.Double(vector.x, vector.y);
                                                ^
    (see http://t.uber.com/nullaway )
../wpi/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8/src/org/delaunay/algorithm/Triangulation.java:134: error: [NullAway] dereferenced expression v is @Nullable
                return rect.contains(v.toPoint());
                                      ^
    (see http://t.uber.com/nullaway )
../wpi/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8/src/org/delaunay/algorithm/Triangulation.java:296: error: [NullAway] dereferenced expression v1.getHilbertIndex() is @Nullable
                return v1.getHilbertIndex().compareTo(v2.getHilbertIndex());
                                           ^
    (see http://t.uber.com/nullaway )
../wpi/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8/src/org/delaunay/algorithm/Triangulation.java:354: error: [NullAway] dereferenced expression rect is @Nullable
        double dmax = Math.max(rect.getWidth(), rect.getHeight());
                                   ^
    (see http://t.uber.com/nullaway )
../wpi/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8/src/org/delaunay/algorithm/Triangulation.java:497: error: [NullAway] dereferenced expression e is @Nullable
                return new Triangle(vertex, e.a, e.b);
                                             ^
    (see http://t.uber.com/nullaway )
../wpi/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8/src/org/delaunay/algorithm/Triangulation.java:517: error: [NullAway] enhanced-for expression tris is @Nullable
        for (Triangle t : tris) {
                          ^
    (see http://t.uber.com/nullaway )
../wpi/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8/src/org/delaunay/model/TriangulationMap.java:59: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return map.get(v);
        ^
    (see http://t.uber.com/nullaway )
../wpi/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8/src/org/delaunay/dtfe/Dtfes.java:22: error: [NullAway] assigning @Nullable expression to @NonNull field
            this.aChild = aChild;
                        ^
    (see http://t.uber.com/nullaway )
../wpi/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8/src/org/delaunay/dtfe/Dtfes.java:23: error: [NullAway] assigning @Nullable expression to @NonNull field
            this.bChild = bChild;
                        ^
    (see http://t.uber.com/nullaway )
../wpi/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8/src/org/delaunay/algorithm/TriangulationLocateTest.java:33: error: [NullAway] dereferenced expression vert is @Nullable
                    return vert.subtract(v).lengthSquared();
                               ^
    (see http://t.uber.com/nullaway )
../wpi/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8/src/org/delaunay/algorithm/ScaledHilbertIndex.java:16: error: [NullAway] dereferenced expression bbox is @Nullable
        this.scales = new Rectangle2D.Double(bbox.getMinX(), bbox.getMinY(), side / bbox.getWidth(), side / bbox.getHeight());
                                                 ^
    (see http://t.uber.com/nullaway )
../wpi/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8/src/org/delaunay/algorithm/samples/LocateStrategies.java:49: error: [NullAway] dereferenced expression vert is @Nullable
                    return vert.subtract(v).lengthSquared();
                               ^
    (see http://t.uber.com/nullaway )
../wpi/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8/src/org/delaunay/model/Voronoi.java:50: error: [NullAway] dereferenced expression t is @Nullable
                    return t.getVertices().contains(a) && t.getVertices().contains(b);
                            ^
    (see http://t.uber.com/nullaway )
Note: ../wpi/url863d2ab553_themadcreator_delaunay_tgz-pJ8-org_delaunay_PoissonDiscSamplesDemoJ8/src/org/delaunay/model/Vector.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
16 errors
